# Mini-Nav

./: .envrc  .gitignore  .justfile  CLAUDE.md  DEVELOPMENT.md  LICENSE  devenv.nix  devenv.yaml  environment.yml  main.py  pyproject.toml  venv.yaml
.claude/: settings.local.json
.serena/: project.yml
mini-nav/: __init__.py  database.py  feature_retrieval.py  main.py
mini-nav/benchmarks/: __init__.py  base.py  runner.py  task_eval.py
mini-nav/benchmarks/datasets/: __init__.py  huggingface.py  local.py
mini-nav/benchmarks/tasks/: __init__.py  multi_object_retrieval.py  registry.py  retrieval.py
mini-nav/commands/: __init__.py  app.py  benchmark.py  generate.py  train.py  visualize.py
mini-nav/compressors/: __init__.py  common.py  dino_compressor.py  float_compressor.py  hash_compressor.py  int_compressor.py  pipeline.py  segament_compressor.py  train.py
mini-nav/configs/: __init__.py  config.py  config.yaml  feature_compressor.yaml  loader.py  models.py
mini-nav/data_loading/: __init__.py  insdet_scenes.py  loader.py  synthesizer.py
mini-nav/datasets/: __init__.py  loader.py
mini-nav/feature_compressor/: __init__.py
mini-nav/feature_compressor/core/: __init__.py  compressor.py  extractor.py  visualizer.py
mini-nav/feature_compressor/examples/: basic_usage.py  batch_processing.py  visualization.py
mini-nav/feature_compressor/utils/: __init__.py  feature_utils.py  image_utils.py  plot_utils.py
mini-nav/habitat/: test.py
mini-nav/tests/: __init__.py  test_compressor.py  test_compressors.py  test_config.py  test_extractor.py  test_feature_extractor.py  test_multi_object_retrieval.py  test_sam.py  test_scene_scoring.py  test_visualizer.py
mini-nav/utils/: __init__.py  common.py  feature_extractor.py  sam.py
mini-nav/visualizer/: app.py  events.py
openspec/: config.yaml
