[project]
name = "mini-nav"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=3.4.0",
    "dash-ag-grid>=33.3.3",
    "dash-mantine-components>=2.5.1",
    "datasets>=4.5.0",
    "httpx[socks]>=0.28.1",
    "lancedb>=0.27.1",
    "polars[database,numpy,pandas,pydantic]>=1.37.1",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "scikit-learn>=1.7.2",
    "transformers>=5.0.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.37.4",
    "pip>=26.0.1",
    "pytest>=9.0.2",
    "pytest-mpi>=0.6",
]

[tool.ty.environment]
root = ["./mini-nav"]
